--- a/template/index.html
+++ b/template/index.html
@@ -16,6 +16,62 @@ background-color: #fff;
             color: red;
             text-align: center;
         }
+        .lds-ellipsis {
+            display: inline-block;
+            position: relative;
+            width: 64px;
+            height: 64px;
+        }
+        .lds-ellipsis div {
+            position: absolute;
+            top: 27px;
+            width: 11px;
+            height: 11px;
+            border-radius: 50%;
+            background: #fff;
+            animation-timing-function: cubic-bezier(0, 1, 1, 0);
+        }
+        .lds-ellipsis div:nth-child(1) {
+            left: 6px;
+            animation: lds-ellipsis1 0.6s infinite;
+        }
+        .lds-ellipsis div:nth-child(2) {
+            left: 6px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+        .lds-ellipsis div:nth-child(3) {
+            left: 26px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+        .lds-ellipsis div:nth-child(4) {
+            left: 45px;
+            animation: lds-ellipsis3 0.6s infinite;
+        }
+        @keyframes lds-ellipsis1 {
+            0% {
+                transform: scale(0);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+        @keyframes lds-ellipsis3 {
+            0% {
+                transform: scale(1);
+            }
+            100% {
+                transform: scale(0);
+            }
+        }
+        @keyframes lds-ellipsis2 {
+            0% {
+                transform: translate(0, 0);
+            }
+            100% {
+                transform: translate(19px, 0);
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -26,7 +82,8 @@ background-color: #fff;
         <div style="height: 400px">
             <editor editor-id="editorA" :content="contentA" v-on:change-content="changeContentA" ></editor>
         </div>
-        <button type="submit"  @click="getcontentA">Run</button>
+        <button :disabled="codesend" type="submit"  @click="getcontentA">Run</button>
+
         <!-- <p class="result">${contentA}</p> -->
          
         <!-- <p>Editor B</p>
@@ -34,12 +91,13 @@ background-color: #fff;
         <editor editor-id="editorB" :content="contentB" v-on:change-content="changeContentB"></editor>
         </div>
         <p class="result">${contentB}</p> -->
-      
+        <div id="console">
+            <div v-if="codesend" class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+            ${ cons }
+        </div>
     </div>
 
-    <div id="console">
 
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://rawgit.com/ajaxorg/ace-builds/master/src-min-noconflict/ace.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -94,9 +152,13 @@ background-color: #fff;
                     '}',
                 //   contentB: 'default content for Editor B'
                 base_usl: 'http://127.0.0.1:8080',
+                cons : "",
+                codesend: false,
             }
         },
-            delimiters: ["${", "}"],
+
+         delimiters: ["${", "}"],
+
         methods: {
             reset () {
                 this.contentA = 'reset content for Editor A'
@@ -118,14 +180,14 @@ background-color: #fff;
 
             sendcode(exoid) {
                // this.editor = window.ace.edit('editor')
-
+                this.cons = "";
+                this.codesend = true;
                 //code = this.editor.getValue()
 
                 let data = JSON.stringify({
-                    source_code: exoid
-                })
+                    source_code: exoid,
 
-                console.log(data)
+                })
 
 
 
@@ -136,11 +198,12 @@ background-color: #fff;
                 }).then((response) => {
                     //let resultats = JSON.parse(response.data)
                     console.log(response.data);
-                    console = document.getElementById("console")
-                    let out = "time: " + response.data.time + "\n" + "result: " + response.data.stdout
-                    console.innerHTML = out
+                    this.cons = "time: " + response.data.time + "\n" + "result: " + response.data.stdout
+                    this.codesend = false;
+
                 }).catch((err) => {
                     console.log(err);
+                    this.codesend = false;
                 })
             },
 
