--- a/mon-app/src/App/Editor/Console/console.css
+++ b/mon-app/src/App/Editor/Console/console.css
@@ -2,4 +2,12 @@
     border-top: 1px solid #ccc; 
     height: 100px;
     background: #2D2D2D;
+    color: #eee;
 }
+
+
+#Console strong {
+    color: #B9090B;
+}
+
+
